Version 0.15.3 (2021-10-9)
   * Fix to https://github.com/traversc/stringfish/issues/7; definition conflict with bundled PCRE2
   * Update autoconf to version 2.6.9 (autoupdate; autoreconf --warnings=obsolete)

Version 0.15.2 (2021-7-23)
   * Change ALTVEC_DATAPTR to DATAPTR to conform to changes in the API

Version 0.15.1 (2021-3-13)
   * Fix PCRE2 issue on Apple M1
   * Fix for missing return type in src/sf_disabled.h

Version 0.15.0 (2021-2-20)
   * Reduce requirement for R 3.5 so packages depending on `stringfish` don't require R 3.5. Most functionality will not be available in R < 3.5.
   * Update `xxhash` library to release 0.8.0 and use the improved XXH3 algorithm for hashing. 

Version 0.14.2 (2020-9-3)
   * Fix bug with `extract_subset` ALTREP routine (https://github.com/traversc/qs/issues/42)
   
Version 0.14.1 (2020-7-23)
   * Implemented multithreading with RcppParallel
   * Addition of `Extract_subset` ALTREP method
   * Additional functions (`sf_compare`, `sf_concat`, `sf_equals`)
   * Various bug fixes

Version 0.13.2 (2020-7-5)
   * Removed -mshstk flag to fix CRAN note

Version 0.13.1 (2020-7-5)
   * Additional functions: `sf_toupper`, `sf_tolower`, `sf_toupper`, `sf_tolower`, `sf_starts`, `sf_ends`, `sf_trim`, `sf_split`, `sf_match`
   * Additional functions: `string_identical`, `sf_writeLines`

Version 0.11.2 (2020-6-1)
   * Fixed compilation error on Fedora (adding -mshstk flag compile flag in configure file)
   * Fixed a bug in alt-rep set_string_elt method
   * Added additional sfstring constructor `sfstring(size_t, cetype_t)`

Version 0.11.2 (2020-6-1)
   * Fixed compilation error on Fedora (adding -mshstk flag compile flag in configure file)
   * Fixed a bug in alt-rep set_string_elt method
   * Added additional sfstring constructor `sfstring(size_t, cetype_t)`

Version 0.11 (2020-5-14)
   * Check for PCRE2 system installation and updated bundled version to latest (10.35)
   * Fix to copyright statements in DESCRIPTION file
