@@ -1,5 +1,4 @@
-# Generated by using Rcpp::compileAttributes() -> do not edit by hand
-# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+# Custom RcppExports edited
 
 set_is_utf8_locale <- function() {
     invisible(.Call(`_stringfish_set_is_utf8_locale`))
@@ -41,7 +40,7 @@ sf_assign <- function(x, i, e) {
     invisible(.Call(`_stringfish_sf_assign`, x, i, e))
 }
 
-sf_iconv <- function(x, from, to, nthreads = 1L) {
+sf_iconv <- function(x, from, to, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_iconv`, x, from, to, nthreads)
 }
 
@@ -49,15 +48,15 @@ convert_to_sf <- function(x) {
     .Call(`_stringfish_convert_to_sf`, x)
 }
 
-sf_nchar <- function(x, type = "chars", nthreads = 1L) {
+sf_nchar <- function(x, type = "chars", nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_nchar`, x, type, nthreads)
 }
 
-sf_substr <- function(x, start, stop, nthreads = 1L) {
+sf_substr <- function(x, start, stop, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_substr`, x, start, stop, nthreads)
 }
 
-c_sf_paste <- function(dots, sep, nthreads = 1L) {
+c_sf_paste <- function(dots, sep, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_c_sf_paste`, dots, sep, nthreads)
 }
 
@@ -73,15 +72,15 @@ sf_writeLines <- function(text, file, sep = "\n", na_value = "NA", encode_mode =
     invisible(.Call(`_stringfish_sf_writeLines`, text, file, sep, na_value, encode_mode))
 }
 
-sf_grepl <- function(subject, pattern, encode_mode = "auto", fixed = FALSE, nthreads = 1L) {
+sf_grepl <- function(subject, pattern, encode_mode = "auto", fixed = FALSE, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_grepl`, subject, pattern, encode_mode, fixed, nthreads)
 }
 
-sf_split <- function(subject, split, encode_mode = "auto", fixed = FALSE, nthreads = 1L) {
+sf_split <- function(subject, split, encode_mode = "auto", fixed = FALSE, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_split`, subject, split, encode_mode, fixed, nthreads)
 }
 
-sf_gsub <- function(subject, pattern, replacement, encode_mode = "auto", fixed = FALSE, nthreads = 1L) {
+sf_gsub <- function(subject, pattern, replacement, encode_mode = "auto", fixed = FALSE, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_gsub`, subject, pattern, replacement, encode_mode, fixed, nthreads)
 }
 
@@ -97,11 +96,11 @@ sf_toupper <- function(x) {
     .Call(`_stringfish_sf_toupper`, x)
 }
 
-sf_match <- function(x, table, nthreads = 1L) {
+sf_match <- function(x, table, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_match`, x, table, nthreads)
 }
 
-sf_compare <- function(x, y, nthreads = 1L) {
+sf_compare <- function(x, y, nthreads = getOption("stringfish.nthreads", 1L)) {
     .Call(`_stringfish_sf_compare`, x, y, nthreads)
 }
 
